# Markdown2Anki

./: .gitattributes  .gitignore  AGPL_license.txt  CHANGELOG.md  CONTRIBUTING.md  LICENSES  Modifications  Note_when_updating.txt  README.md  _styles_for_syntax_highlighting.css  main_test.html  makefile  pyproject.toml  style.css  test.html
.github/: label_pr.yml  pr-labeler.yml
.github/workflows/: build.yaml  create-release.yaml  publish-release.yaml
Add-ons/Parse_txt_to_tabs/: README.md  __init__.py  config.json  definitionGetter.py  meta.json
Cards_type/: LICENSE.txt  README.md  _catpuccin_highlight.css  esbuild.js  esbuild_themes.js  esbuild_watch.js  main.js  main_test.html  package-lock.json  package.json  style.css
Cards_type/Style_dev/: main.sass
Cards_type/Style_dev/utilities/: normalize.sass
Cards_type/script_dev/: main.ts  tsconfig.json
Cards_type/src/: main.ts
Cards_type/src/style/: base.sass  layout.sass  main.sass
Cards_type/themes/: catpuccin_latte.css  catpuccin_macchiato.css
SMACSS SASS/: base.sass  layout.sass  main.sass
SMACSS SASS/modules/highlight/: highlight.md  highlight.sass
SMACSS SASS/modules/tab/: README.md  tab.sass
SMACSS SASS/modules/tab_group/: tab_group.sass
SMACSS SASS/utilities/: variables.sass
Style_dev/: base.sass
Style_dev/modules/highlight/: README.md  highlight.sass  test.html
Style_dev/modules/tab_group/: test.html
Style_dev/utilities/: general.sass
docs/: How_to_find_styling.webm  legacy_importing_cards_with_csv.md
frontend/: build_theme_builder.js  esbuild.js  esbuild_themes.js  main_test.html  main_test_no_tabs.html  package-lock.json  package.json
frontend/src/: main.ts
frontend/src/style/: anki_specific.sass  base.sass  layout.sass  main.sass  themeless_main.sass
script_MD_to_anki/: MD_to_anki.py  Note_when_updating.txt  Template for coding cards.md  card_dataclasses.py  card_error.py  card_types.py  cards_specific_wrappers.py  config.ini  config_handle.py  configs_handle.py  debug_tools.py  dev_requirements.txt  extract.py  formatters.py  logger.py  main_script.py  md_to_anki.py  obsidian_image_plugin.py  obsidian_link_plugin.py  output_handler.py  parse_args.py  process_card.py  process_clozes.py  process_images.py  setup.py  tab_swapping.py  template for coding cards.md  test.html  text_to_html.py
script_MD_to_anki/config/: casters.py  config_setup.py  configs_handle.py  first_config.py  link_to_config_dir.ini  parse_args.py  validators.py
script_MD_to_anki/config/config_setup/: __init__.py  casters.py  validators.py
script_MD_to_anki/md_2_anki/: md_to_anki.py
script_MD_to_anki/md_2_anki/process_card/: process_card.py
script_MD_to_anki/md_2_anki/process_clozes/: process_clozes.py
script_MD_to_anki/md_2_anki/process_images/: process_images.py
script_MD_to_anki/md_2_anki/utils/: __init__.py  card_dataclasses.py  card_error.py  card_types.py
script_MD_to_anki/pip_requirements/: requirements.txt
script_MD_to_anki/pygments/formatters/: html.py
script_MD_to_anki/utils/: common_types.py  debug_tools.py
src/: logger.py  main_script.py
src/config/: configs_handle.py  parse_args.py  welcome_message.txt
src/config/config_setup/: casters.py
src/markdown2anki/: __init__.py  ankiconnect.py  logger.py  markdown_handler.py  output_handler.py  version_check.py
src/markdown2anki/config/: Markdown2Anki.apkg  configs_handle.py  first_config.py  parse_args.py  welcome_message.txt
src/markdown2anki/md_2_anki/: __init__.py  md_to_anki.py
src/markdown2anki/utils/: common_types.py
src/md_2_anki/: md_to_anki.py
src/md_2_anki/process_card/: process_card.py
src/md_2_anki/process_images/: process_images.py
src/utils/: debug_tools.py
tests/: __init__.py  conftest.py  test_tmp.py
tests/setup/: __init__.py  config_file_patch.py
tests/unit_tests/: test_ankiconnect.py  test_markdown_handler.py
theme_builder/: README.md  main.js  test.html
theme_builder/style/: Hightlight_theme_template.css  UI_theme_template.css  themeless_main.css
themes/: README.md  catpuccin_latte.css  catpuccin_latte_and_macchiato.css  catpuccin_macchiato.css  rose_pine.css  rose_pine_and_dawn.css  rose_pine_dawn.css  tokyonight_storm.css
(+179 files in other folders)
